feat(b-02): finished backend for creating, and delting a comment for a case internal use only
